Adjustments on post about meetup

--- a/_posts/2014-10-02-meetup-css-02.markdown
+++ b/_posts/2014-10-02-meetup-css-02.markdown
@@ -65,6 +65,6 @@ Os ganhadores foram:
 Deixo aqui em meu nome e com certeza de <b>toda galera</b>, um <b>muito obrigado</b> para:
 
 * a <a href="http://www.lambda3.com.br/">Lambda 3</a> em nome do <a href="https://www.facebook.com/wgrasel">William</a> que nos cedeu o espaço para a realização do meetup;
-* ao pessoal do <a href="http://imasters.com.br/">iMasters</a> pelo <i>coffee</i>;
+* ao <a href="http://imasters.com.br/">iMasters</a> em nome do <a href="https://twitter.com/bernarddeluna">Bernard De Luna</a>, que agora é <i>community manager</i> de lá e que desde o começo nos apoiou e dessa vez nos ofereceu o <i>coffee</i>;
 * ao <a href="https://twitter.com/PayPal_BR">PayPal</a> pelo sorteio dos convites.
 
