Update the post about 2014

--- a/_drafts/2014-12-12-2014-foi-demais.markdown
+++ b/_drafts/2014-12-12-2014-foi-demais.markdown
@@ -61,4 +61,6 @@ Não tínhamos ambição de ficar famoso nem de virar *fulano* ou *beltrano*, si
 
 Poder ver que algo que você fez pôde ajudar outras pessoas é simplesmente sensacional. Digo isso, pois na maioria das vezes estou do lado que foi ajudado e, pelo menos uma vez estar do lado de quem ajuda é um negócio que nunca imaginei.
 
+Acredito que mais do que ter vontade de fazer algo e ir atrás, é ter por perto pessoas que não te deixam desacreditar do que você busca. E nesse ponto posso com tranquilidade citar minha família. Minha namorada que é formada em moda, já até fuçou no CodeAcademy pra ter uma base do que faço e o que acho mais legal, [ela foi em quase todos meetups e eventos que palestrei](http://instagram.com/p/tlrEbexA9_/?modal=true).
+
 Como sempre penso pra frente, minha idéia é que 2015 seja ainda melhor. Vou contando por aqui ...
