--- a/_drafts/2014-12-12-2014-foi-demais.markdown
+++ b/_drafts/2014-12-12-2014-foi-demais.markdown
@@ -4,12 +4,12 @@ title:  "Valeu 2014!"
 description: "Um resumo de porque 2014 foi tão legal"
 type: Post
 date: 2014-12-12
-image: ''
+image: '2014-demais.jpg'
 ---
 
 Todo mundo já disse ou ouviu alguém dizer: *"Nossa! O ano passou voando!"*. Nunca dei muito valor a essa frase, mas esse ano pude comprovar que é verdade. Se passou rápido, geralmente é porque você esteve ocupado com outras coisas e teoricamente não teve tempo de *aproveitar* o ano; felizmente acho eu, posso contrariar um pouco essa teoria: o ano realmente passou rápido porque estava ocupado com algumas coisas, mas **coisas boas** e posso dizer que foi um ano muito produtivo e que não deixei de aproveitá-lo.
 
-Sempre fazemos promessas no começo de cada ano e esse ano não foi diferente. Tentei ao máximo colocar em prática tudo que *havia prometido*; claro que não consegui tudo, mas foi o suficiente para me deixar bem feliz.
+Sempre fazemos promessas no começo de cada ano e esse não foi diferente. Tentei ao máximo colocar em prática tudo que *havia prometido*; claro que não consegui tudo, mas foi o suficiente para me deixar bem feliz.
 
 Algumas das coisas que fizeram de 2014 um ano sensacional. **\o/**
 
@@ -19,29 +19,36 @@ Algumas das coisas que fizeram de 2014 um ano sensacional. **\o/**
     <img src="{{ site.baseurl}}build/img/posts/2014-eventos.jpg" alt="Interior de uma gaveta com vários crachás de eventos de desenvolvimento web e design">
 </figure>
 
-Depois de um dos *meetups* do [FEMUG](http://sp.femug.com/), estava <s>em um bar</s> conversando com o pessoal até que começamos a falar sobre eventos. Aí o grande [Rinaldi](https://twitter.com/rafaelrinaldi) soltou: *"Pô Fabeni! Você tá em todos?"*. Em partes foi verdade.
+Depois de um dos *meetups* do [FEMUG SP](http://sp.femug.com/), estava <s>em um bar</s> conversando com o pessoal até que começamos a falar sobre eventos. Aí o grande [Rinaldi](https://twitter.com/rafaelrinaldi) soltou: *"Pô Fabeni! Você tá em todos?"*. Em partes foi verdade.
 
 Minha meta esse ano era ir em todos os eventos (eventos, meetups, conferências, ...) que pudesse, inclusive os que eram fora de São Paulo. **Queria** ter ido em todos que pretendia, mas não consegui.
 
-Valeu a pena? Claro. Posso adiantar que não era uma meta barata, pois apesar de alguns eventos, como os *meetups*, serem gratuitos, a grande maioria é paga. E apesar de sempre rolar um cupom promocional *aqui e acolá*, esporadicamente a brincadeira não fica  cara, mas quando a sua meta é abraçar a todos, a fatura do cartão de crédito começa a rir da sua cara. Se é fora de São Paulo ainda (meu caso), onde além da entrada você precisa ir atrás de hospedagem e transporte, a brincadeira fica mais séria.
+Valeu a pena? Claro. Posso adiantar que não era uma meta barata, pois apesar de alguns eventos, como os *meetups*, serem gratuitos, a grande maioria é paga. E apesar de sempre rolar um cupom promocional *aqui e acolá*, esporadicamente a brincadeira não fica cara, mas quando a sua meta é abraçar a todos, a fatura do cartão de crédito começa a rir da sua cara. Se é fora da cidade que você mora, onde além da entrada você precisa ir atrás de hospedagem e transporte, a brincadeira fica mais séria.
 
 Mas aí você me pergunta: *Fabeni, vale a pena?*. Fiz essa pergunta pra mim mesmo, quando levantei os gastos que tive pra ir assistir o [Front in BH](http://frontinbh.com.br/). E a minha resposta foi mais rápida do que imaginei: **vale e muito**.
 
 Você tem a oportunidade de ver coisas recentes, fazer novas amizades, conversar de assuntos que só você da sua família entende e claro, dar muita risada. Se você ainda não teve essa coragem de viajar pra ir a um evento, **recomendo e muito**. Se você pensa muito até em ir em eventos da sua cidade, **não pense**!
 
+Aqui algumas dicas de eventos pra você começar:
+
+* [FEMUG SP](http://sp.femug.com/)
+* [Meetup CSS SP](http://www.meetup.com/CSS-SP/)
+* [DevBeers](http://www.devbeers.io/)
+* [NodeBR SP](http://www.meetup.com/NodeBR-Sao-Paulo/)
+
 ## Criar coragem e subir no palco
 
 Palestrar sempre foi uma palavra que me dava um certo receio. Na época de colégio e faculdade, sempre que precisou fui o *cara que apresentava o trabalho*, mas até aí estava diante dos meus amigos com quem dava risada e enchia o saco todo dia e no máximo tinha um ou outro professor desconhecido.
 
-Agora palestrar em eventos, conferências, para um monte de pessoas desconhecidas e que na maioria das vezes, pagaram pra estar ali assistindo sua palestra, era algo que nunca havia imaginado.
+Agora palestrar em eventos para um monte de pessoas desconhecidas e que pagaram pra estar ali assistindo sua palestra, era algo que nunca havia imaginado.
 
-Não vou mentir e dizer que essa era uma meta que fiz no começo desse ano. Mas foi uma meta que tive coragem de assumir próximo do meio do ano. Resumidamente foi assim: sempre achei o [TDC](http://www.thedevelopersconference.com.br/) um evento muito legal. Esse ano quando as inscrições abriram e ia me inscrever, acabei vendo o link em um tweet para submissão de palestras. Na época estava mexendo bastante com *SASS* e *CSS3* e pensei, **por que não?**
+Não vou mentir e dizer que essa era uma meta que fiz no começo desse ano. Mas foi uma meta que tive coragem de assumir próximo do meio do ano. Resumidamente: sempre achei o [TDC](http://www.thedevelopersconference.com.br/) um evento muito legal. Esse ano quando as inscrições abriram e ia me inscrever, acabei vendo o link em um tweet para submissão de palestras. Na época estava mexendo bastante com *SASS* e *CSS3* e pensei, **por que não?**
 
 Mandei! Passaram uns 10 dias e já meio que tinha desistido. Até que um dia a noite estava em casa e o pessoal da organização me ligou: tinham gostado do tema e queriam saber se eu podia palestrar. **Claro que podia!** Foi um susto! Mas um susto legal! Estava feliz pra caramba, no entanto conforme a ficha foi caindo e me dei conta que iria falar diante de um monte de gente num evento do tamanho do TDC, fui começando a ficar nervoso pra **c...**. ([contei um pouco nesse post](/tdc-2014/)).
 
 Depois daí, acabei conhecendo mais pessoas e começaram a aparecer alguuns convites como o [DevInCompany](/dev-in-company/) em BH, e o [WordCamp](/wordcamp-sp-2014/) e o [Front in Sampa](/front-in-sampa/) aqui em São Paulo.
 
-Pra você que também é tímido como eu e pensa na palavra *palestrar* como algo anos luz de distância, deixo aqui o que aconteceu comigo: saia dessa zona de conforto e arrisque. Submeta suas idéias! Às vezes o que você considera *simples* pode ser um tema que muita gente quer saber mais.
+Pra você que também é tímido como eu e pensa na palavra *palestrar* como algo anos luz de distância, deixo aqui o que aconteceu comigo: saia dessa zona de conforto e arrisque. Submeta suas idéias! Às vezes o que você considera *simples* pode ser um tema que muita gente queira saber mais.
 
 ## Fazer algo diferente
 
@@ -61,6 +68,6 @@ Não tínhamos ambição de ficar famoso nem de virar *fulano* ou *beltrano*, si
 
 Poder ver que algo que você fez pôde ajudar outras pessoas é simplesmente sensacional. Digo isso, pois na maioria das vezes estou do lado que foi ajudado e, pelo menos uma vez estar do lado de quem ajuda é um negócio que nunca imaginei.
 
-Acredito que mais do que ter vontade de fazer algo e ir atrás, é ter por perto pessoas que não te deixam desacreditar do que você busca. E nesse ponto posso com tranquilidade citar minha família. Minha namorada que é formada em moda, já até fuçou no CodeAcademy pra ter uma base do que faço e o que acho mais legal, [ela foi em quase todos meetups e eventos que palestrei](http://instagram.com/p/tlrEbexA9_/?modal=true).
+Acredito que mais do que ter vontade de fazer algo e ir atrás, é ter por perto pessoas que não te deixam desacreditar do que você busca. E nesse ponto posso com tranquilidade citar minha família. Minha namorada que é formada em moda, já até fuçou no CodeAcademy pra ter uma base do que faço todo dia e o que acho mais legal, [ela foi em quase todos meetups e eventos que palestrei](http://instagram.com/p/tlrEbexA9_/?modal=true).
 
-Como sempre penso pra frente, minha idéia é que 2015 seja ainda melhor. Vou contando por aqui ...
+Termino 2014 mais empolgado do que nunca. Entrei pro time de desenvolvimento da [Netshoes](http://www.netshoes.com.br) e vou trabalhar ao lado de caras *f...*. Que venha 2015 :)
