Update the text about 7Masters

--- a/_drafts/2015-02-26-7-master-css.markdown
+++ b/_drafts/2015-02-26-7-master-css.markdown
@@ -4,7 +4,7 @@ title:  "7Masters CSS"
 description: "Evento idealizado pelo iMasters teve sua edição com CSS como tema"
 type: Post
 date: 2015-02-26
-image: '7-master-css.jpg'
+image: '7-masters.jpg'
 alt: ''
 ---
 
@@ -14,9 +14,9 @@ Ontem rolou mais uma edição do 7Masters do [iMasters](http://www.imasters.com.
 
 Particularmente eu gosto bastante desse formato. O tempo curto acaba forçando as *talks* a serem bem objetivas o que gera uma discussão bem focada entre os participantes. Geralmente é aberta uma lista de inscrição para a galera se inscrever e eles selecionam o público que irá participar. Segundo a organização, a idéia é que o evento seja algo pequeno e mais fechado, mas de alto nível e que possa ter uma interação grande entre todos.
 
-Nessa edição o [tema geral era CSS](http://setemasters.imasters.com.br/edicoes/css/) e fiquei super feliz quando recebi o convite para palestrar. Já havia ido a outras edições do 7Masters mas apenas como ouvinte. 
+Nessa edição o [tema geral era CSS](http://setemasters.imasters.com.br/edicoes/css/) e fiquei super feliz quando recebi o convite para palestrar. Já havia ido a outras edições do 7Masters mas apenas como ouvinte.
 
-Por se tratar de um evento menor, o iMasters sempre grava as palestras e depois divulga os vídeos no portal, no entanto, dessa vez, além disso, eles fizeram uma [transmissão ao vivo](http://imasters.com.br/desenvolvimento/7masters-css-acompanhe-ao-vivo-agora/), possibilitando a quem não conseguiu uma vaga que pudesse acompanhar *online*.
+Por se tratar de um evento menor, o iMasters sempre grava as palestras e depois divulga os vídeos no portal, no entanto, dessa vez eles fizeram uma [transmissão ao vivo](http://imasters.com.br/desenvolvimento/7masters-css-acompanhe-ao-vivo-agora/), possibilitando a quem não conseguiu uma vaga que pudesse acompanhar *online*.
 
 ## As talks
 
@@ -25,7 +25,7 @@ Por se tratar de um evento menor, o iMasters sempre grava as palestras e depois 
 A talk do [Hugo](https://twitter.com/hugoabessa) foi *[Perfomance em Animações]()* o que é um assunto cada vez mais em foco. Já tinha visto a talk em uma edição recente meetup CSS SP, mas confesso que na correria da organização acabei não me dedicando 100% ao conteúdo. Dessa vez, pude prestar atenção do início ao fim e achei bem legal a abordagem do Hugo, explicando por exemplo a questão das *composite layers*.
 
 <figure class="text-center loading">
-  <iframe src="//www.slideshare.net/slideshow/embed_code/45145819" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+  <iframe src="//www.slideshare.net/slideshow/embed_code/45145819" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 </figure>
 
 ### Diego Eis
@@ -36,7 +36,7 @@ O [Diego](https://twitter.com/diegoeis) falou sobre *CSS4*, ou como ele mostrou,
 
 ### Deivid Marques
 
-O [Deivid](https://twitter.com/deividmarques) falou de um assunto que eu já tinha estudado há um tempo atrás mas que tenho usado beeem pouco no dia a dia: filtros com *css*. Ele mostrou uns exemplos bem legais, envolvendo a customização *real time* de uma foto com filtros e animações e um outro texto sendo aplicado um filtro formando assim uma espécia de máscara. Beem legal.
+O [Deivid](https://twitter.com/deividmarques) falou de um assunto que eu já tinha estudado há um tempo atrás mas que tenho usado beeem pouco no dia a dia: filtros com *css*. Ele mostrou uns exemplos bem legais, envolvendo a customização *real time* de uma foto com filtros e animações e um texto onde era aplicado um filtro formando assim uma espécie de máscara.
 
 **Obs.** Aguardando/procurando link da talk.
 
@@ -48,9 +48,15 @@ O [Lyra](https://twitter.com/rafaellyra), como disseram, é o cara do *SMACSS*. 
 
 ### Rafael Rinaldi
 
-O [Rinaldi](https://twitter.com/rafaelrinaldi)
+O [Rinaldi](https://twitter.com/rafaelrinaldi), um dos caras que considero que mais entende sobre organização e arquitetura de *CSS*, fez uma talk bem bacana sobre *Consistência visual em projetos web*. Como ele disse, *CSS* é fácil de mudar mas muito difícil de testar. Na talk ele aborda diversas técnicas existentes atualmente com o objetivo, de como ele mesmo diz, *blindar* a consistência visual e evitar que as *coisas quebrem*. O que acho bem convicente das palestras dele é que ao apresentar um assunto ou tema, ele levanta todos os pontos relacionados além de dar uma boa embasada conceitual, o que faz com que a discussão posterior sobre o tema renda bastante.
+
+<script async class="speakerdeck-embed" data-id="800019540e264ff9829777354676d9f5" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
 ### Raphael Fabeni
+
+Esse cara falou umas *groselhas* lá na frente sobre *CSS e UX*. A idéia da talk era dar uma passada rápida sobre a importância de uma boa experiência do usuário e como os mínimos detalhes podem fazer uma grande diferença. Partindo desse ponto, o objetivo era mostrar como propriedades dp *CSS3*, como *animation* e *transform*, podem nos auxiliar de forma simples a enriquecer nossos componentes.
+
+<script async class="speakerdeck-embed" data-id="0d273809db77416c98d2e2ccf2197680" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
 
 ### Bernard de Luna
 
@@ -58,8 +64,8 @@ O [Bernard](https://twitter.com/bernarddeluna) fez a *talk* que provavelmente le
 
 ## Geral do evento
 
-Já tinha ido ao *7Masters* mas, como disse anteriormente, essa edição pra mim era especial. Só elogios para a galera do iMasters, em especial do Bernard, Rina, Edu e Mackenzie pela organização do evento.
+Já tinha ido ao *7Masters* mas, como disse anteriormente, essa edição pra mim era especial. Só tenho elogios pra galera do iMasters, em especial ao Bernard, Rina, Edu e Mackeenzy pela organização do evento. Ainda queria citar a presença do [Léo Beto](https://twitter.com/leobetosouza) que veio do Rio de Janeiro de última hora só pro evento. Sensacional!
 
-Foi muito bom poder rever a galera e discutir um tema que acho bem legal. Que tenham mais eventos assim em 2015. Aproveitando o gancho, já que estamos falando de *CSS* e evento, em maio agora vai rolar a [Conferência CSS Brasil](http://www.conferenciacssbrasil.com.br) em São Paulo e, durante o evento, soltamos um cupom de desconto exclusivo pra galera. Basta entrar no site da [Eventick](http://www.eventick.com.br/conferenciacssbrasil) e inserir o cupom *7masters* pra garantir o desconto. **\o/**
+É sempre bem legal poder rever essa a galera e ainda mais pra poder discutir sobre um tema como *CSS*. Que tenham mais eventos assim em 2015. Aproveitando o gancho, já que estamos falando de *CSS* e evento, em maio agora vai rolar a [Conferência CSS Brasil](http://www.conferenciacssbrasil.com.br) em São Paulo e, durante o evento, soltamos um cupom de desconto exclusivo pra galera. Basta entrar no site da [Eventick](http://www.eventick.com.br/conferenciacssbrasil) e inserir o cupom *7masters* pra garantir o desconto. **\o/**
 
 
