Updates some tests / add html proofer

--- a/_posts/2014-10-02-meetup-css-02.markdown
+++ b/_posts/2014-10-02-meetup-css-02.markdown
@@ -54,11 +54,11 @@ O <a href="https://twitter.com/PayPal_BR">PayPal</a> ofereceu 5 cortesias para o
 
 Os ganhadores foram:
 
-* <a href="https://twitter.com/paolo_almeida">Paolo Almeida</a>
-* <a href="https://twitter.com/rudwolf">Rodolfo Rodrigues</a>
-* <a href="https://www.facebook.com/paulojeangs">Paulo Jean</a>
-* <a href="https://www.facebook.com/wgrasel">William Grasel</a>
-* <a href="https://twitter.com/felquis">Felquis Gimenes</a>
+* Paolo Almeida
+* Rodolfo Rodrigues
+* Paulo Jean
+* William Grasel
+* Felquis Gimenes
 
 ## Agradecimentos
 
